--- a/graph-nodejs-express-mi/views/home.ejs
+++ b/graph-nodejs-express-mi/views/home.ejs
@@ -19,6 +19,7 @@
                         <% if (isAuthenticated) { %>
                             <h5 class="card-description">Welcome!</h5>
                             <a class="btn btn-primary" href="/users" "role="button">View Users</a>
+                            <a class="btn btn-primary" href="/bookingBusinesses" "role="button">View Booking Businesses</a>
                         <% }  else { %>
                             <h5 class="card-description">Sign-in to access your resources</h5>
                         <% } %>
