feat: :sparkles: add call to bookings api with usertoken

--- a/graph-nodejs-express/views/index.hbs
+++ b/graph-nodejs-express/views/index.hbs
@@ -5,6 +5,8 @@
 <br>
 <a href="/auth/acquireToken">Acquire a token to call the Microsoft Graph API</a>
 <br>
+<a href="/auth/acquireBookingsToken">Acquire a token to call the Microsoft Graph API for Bookings</a>
+<br>
 <a href="/auth/signout">Sign out</a>
 {{else}}
 <p>Welcome to {{title}}</p>
